<resources>
    <string name="app_name">Discover</string>
    <string name="settings">Paramètres</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="error_cannot_write">Cannot write image captured by camera.</string>
    <string name="error_cannot_open">Cannot open camera.</string>
    <string name="error_cannot_get_permission">Camera permission not available.</string>
    <string name="error_not_having_camera">Your device does not have front camera.</string>
    <string name="error_camera_permission_denied">Camera permission denied.</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="favourite_artists">Artistes Préférés</string>
    <string name="gender">Genre : </string>
    <string name="age">Age : </string>
    <string name="description">Description : </string>
    <string name="artist_preview">artist_preview</string>
    <string name="artist">Artiste</string>
    <string name="name">NOM</string>
    <string name="first_name">Prénom</string>
    <string name="profile_picture">profile_picture</string>
    <string name="left_arrow">left_arrow</string>
    <string name="right_arrow">right_arrow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>