<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/popup_background">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="30dp"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_marginTop="40dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_below="@+id/last_name"
        android:layout_marginTop="5dp"
        android:text="@string/first_name" />
</RelativeLayout>