<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:text="@string/gender"/>

    <TextView
        android:id="@+id/gender_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:layout_toEndOf="@+id/gender"/>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="25sp"
        android:text="@string/age" />

    <TextView
        android:id="@+id/age_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="25sp"
        android:layout_toEndOf="@+id/age"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:textSize="25sp"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/description_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="25sp"
        android:layout_below="@+id/description"/>

</RelativeLayout>