<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="2dp"
        card_view:contentPadding="5dp"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/profile_picture" />

                <TextView
                    android:id="@+id/last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_toEndOf="@+id/profile_picture"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_below="@+id/last_name"
                    android:layout_alignStart="@+id/last_name"
                    android:layout_marginTop="5dp"
                    android:text="@string/first_name" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>